# SDL-Android-Hello-World

./: .gitignore  README.md  install-dependencies.sh
YOURPROJECT/app/jni/: .gitignore
YOURPROJECT/app/jni/src/: Android.mk  CMakeLists.txt  main.cpp  texture.cpp  texture.h
YOURPROJECT/app/src/main/: AndroidManifest.xml
YOURPROJECT/app/src/main/java/com/hobogames/testapp/: MyGame.java
YOURPROJECT/app/src/main/java/org/libsdl/app/: SDLActivity.java
YOURPROJECT/app/src/main/res/values/: strings.xml
